--- a/src/style/partials/single.scss
+++ b/src/style/partials/single.scss
@@ -153,7 +153,7 @@
   }
   .swiper-slide {
     cursor: pointer;
-    width: 140px!important;
+    width: 30%!important;
     height: 140px;
     margin: 0 auto;
     display: flex;
